# my32

./: AGENTS.md  CMakeLists.txt  README.md  build.sh  sdkconfig.defaults
app/: CMakeLists.txt  main.c
app/display/: lvgl_hello_world.c  lvgl_hello_world.h
app/display/lvgl_adapt/: lv_README.md  lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lvgl_port.c  lvgl_port.h
app/services/cpu_usage/: cpu_usage.c  cpu_usage.h
app/services/environment_sensor/: environment_sensor.c  environment_sensor.h
app/services/system_time/: system_time.c  system_time.h
app/ui/: demo.md  question.md  touch.md
app/ui/developerMode/: touch_calibration_ui.c  touch_calibration_ui.h
app/ui/home/: home_ui.c  home_ui.h
components/ESP/: CMakeLists.txt
components/LCD/: CMakeLists.txt  idf_component.yml  lcd.c  touch.c
components/LCD/include/: lcd.h  touch.h  touch校准.md
components/WS2812B/: CMakeLists.txt  README.md  ws2812b.c
components/WS2812B/include/: ws2812b.h
components/aht20/: CMakeLists.txt  aht20.c
components/aht20/include/: aht20.h
components/platform/include/: platform_log.h
components/rgb_led/: CMakeLists.txt  README.md  rgb_led.c  rgb_led_driver.c
components/rgb_led/include/: rgb_led.h  rgb_led_driver.h
components/sim_uart/: CMakeLists.txt  sim_uart.c  sim_uart_test.c
components/sim_uart/include/: sim_uart.h
components/tools/ringbuffer/: CMakeLists.txt  ringbuffer.c
components/tools/ringbuffer/include/: ringbuffer.h
docs/aht20/: info.md
docs/lcd/: LVGL.md  lcd_2.8_tft_240*rgb*320.md  读版本号.md
docs/readme/: WS2812B驱动分析.md  YD-ESP32-S3-classics-pinout.md
docs/readme/彩色液晶屏模块 无触摸1.8寸/1.8inch_Arduino_SPI_Module_ST7735S_MAR1801_V1.0/1-Demo/Demo_C51/Demo_STC12C5A60S2_Hardware_SPI/LCD/: LCD.c  lcd.h
docs/readme/彩色液晶屏模块 无触摸1.8寸/1.8inch_Arduino_SPI_Module_ST7735S_MAR1801_V1.0/1-Demo/Demo_C51/Demo_STC12C5A60S2_Hardware_SPI/PROJECT/: ceshi.uvgui.Administrator  ceshi.uvopt  ceshi.uvproj
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/12x24英文字体取模说明/: 函数定义.docx
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/16x32英文字体取模说明/: 函数定义.docx
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/24x48英文字体取模说明/: 函数定义.docx
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/32x64英文字体取模说明/: 函数定义.docx
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/48x96英文字体取模说明/: 函数定义.docx
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/64x128英文字体取模说明/: 函数定义.docx
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/6x12英文字体取模说明/: 函数定义如下.docx
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/6x8英文字体取模说明/: 函数定义.doc
docs/readme/彩色液晶屏模块 无触摸1.8寸/彩色液晶屏模块 无触摸1.8寸/中英文显示取模设置/8x16英文字体取模说明/: 函数定义.docx
(+156 files in other folders)
